kustomize/arr-stack/libretranslate/libretranslate-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libretranslate
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: "true"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: libretranslate
  template:
    metadata:
      labels:
        app: libretranslate
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - aloy
                - joel
                - ellie
      containers:
      - name: libretranslate
        image: libretranslate/libretranslate:latest
        resources:
          limits:
            memory: "8Gi"
            cpu: "8000m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: libre-translate-models
          mountPath: /home/libretranslate/.local/
        - name: libre-translate-db
          mountPath: /app/db/
      volumes:
      - name: libre-translate-models
        persistentVolumeClaim:
          claimName: libre-translate-models
      - name: libre-translate-db
        persistentVolumeClaim:
          claimName: libre-translate-db
