kustomize/arr-stack/libretranslate/libretranslate-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: libretranslate
spec:
  selector:
    app: libretranslate
  ports:
  - port: 5000
    targetPort: 5000
