kustomize/arr-stack/libretranslate/libretranslate-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: libretranslate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`translate.vinicima.com`) || Host(`translate-k8s.vinicima.com`)
      kind: Rule
      services:
        - name: libretranslate
          port: 5000
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
